crates/snapshot-tests/tests/snapshots/parser__bad_floats__no_digit_before_dot_neg.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidInteger]: invalid integer: expected digit after sign at `a`
  ┌─ no_digit_before_dot_neg:1:5
  │
1 │ a = -.7
  │     ^ invalid integer: expected digit after sign


error: invalid integer: expected digit after sign at `a`
 --> no_digit_before_dot_neg:1:5
  |
1 | a = -.7
  |     ^ invalid integer: expected digit after sign
Error {
    kind: "InvalidInteger",
    message: "invalid integer: expected digit after sign",
    span: 4..5,
    path: Some(
        "a",
    ),
}
