crates/snapshot-tests/tests/snapshots/parser__bad_floats__trailing_pos.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidFloat]: invalid float: exponent requires at least one digit at `a`
  ┌─ trailing_pos:1:5
  │
1 │ a = 0.0e+
  │     ^^^^^ invalid float: exponent requires at least one digit


error: invalid float: exponent requires at least one digit at `a`
 --> trailing_pos:1:5
  |
1 | a = 0.0e+
  |     ^^^^^ invalid float: exponent requires at least one digit
Error {
    kind: "InvalidFloat",
    message: "invalid float: exponent requires at least one digit",
    span: 4..9,
    path: Some(
        "a",
    ),
}
